
Change Log will be supplied by English only.
Latest changes might exist on the GitHub repository. Please check: https://github.com/INTER-Mediator/INTER-Mediator.
Also the Migration Guide (Japanese) might be informative: http://inter-mediator.com/ja/docs-migration.html.

Ver.5.0 (in development) ========================================
[Major differences from Ver.4]
- The virtual machine for trial can be made with using script.
- The realtime multi-client updating with the Pusher (WebSocket).
- The Local Context and Context for DB Entities as the context model.
- Master/Detail style page can be built without JS program.
- Search and listing style page can be built without JS program.
- Calculation expression is supported.
- The "Soft-Delete" or "Logical-Delete" is implemented.
- IMLibChangeEventDispatch, IMLibMouseEventDispatch, IMLibKeyEventDispatch for dispatching events.
- HTML5's user defined attributes are supported.
- As for the FileMaker Server, the fmresultset schema is supported.
- Improve performance of portal access mode for FileMaker Server.
- [INFO] We prepared the INTER-Mediator-Server virtual machine for trial and learning purpose.
- [INFO] Internet Explorer Ver.8 is dropped out from the supporting browsers.
- [INFO] FileMaker Server 10 has been deprecated. In the near future, INTER-Mediator will require 
  FileMaker Server 11 or later if using FileMaker Server.
=================================================================

Ver.5.0 (in development)
- Change the URL of INTER-Mediator in INTER-Mediator.js.
- Modify "Asset Management Sample" for the INTER-Mediator-Server virtual machine.
- Thanks to Mr. Kazuaki Osawa for cooperating to clarify the platform issue about the vm build script.
- Thanks to Ms. Naomi Hamaji for sponsored the upcomming Study Meeting.
- [BUG FIX] Fix Vagrantfile, deploy.sh and recipe.rb etc. for the INTER-Mediator-Server virtual machine.

Ver.4.7 (2015/1/25)