@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 /*
- * INTER-Mediator 4.7 - VM for Trial
+ * INTER-Mediator 5.0 - VM for Trial
  * 
  *   Copyright (c) 2010-2015 INTER-Mediator Directive Committee
  * 
@@ -12,11 +12,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>INTER-Mediator 4.7 - VM for Trial</title>
+    <title>INTER-Mediator 5.0 - VM for Trial</title>
     <link href="/INTER-Mediator/Samples/sample.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<h1>INTER-Mediator 4.7 - VM for Trial</h1>
+<h1>INTER-Mediator 5.0 - VM for Trial</h1>
 
 <h2>現在アクセスしているマシンについて</h2>
 
